--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   <div class="full">
                      <div class="center-desk">
                         <div class="logo">
-                           <a href="index.html"><img src="images\Modern_Creative_Technology_Logo-removebg-preview.png" alt="#" /></a>
+                           <a href="index.html"><img src="images\Modern_Creative_Technology_Logo-removebg-preview.png" width="110px" alt="#" /></a>
                         </div>
                      </div>
                   </div>
