--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>4uhost</title>
+      <title>CoderTech Host</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -57,15 +57,6 @@
                            <li class="nav-item active">
                               <a class="nav-link" href="index.html">Inicio</a>
                            </li>
-                           <li class="nav-item">
-                              <a class="nav-link" href="about.html">Ajuda</a>
-                           </li>
-                           <li class="nav-item">
-                              <a class="nav-link" href="hosting.html">Host</a>
-                           </li>
-                          
-                           <li class="nav-item">
-                              <a class="nav-link" href="contact.html">Contato</a>
                            </li>
                         </ul>
                      </div>
@@ -86,8 +77,6 @@
                      <div id="banner1" class="carousel slide">
                         <ol class="carousel-indicators">
                            <li data-target="#banner1" data-slide-to="0" class="active"></li>
-                           <li data-target="#banner1" data-slide-to="1"></li>
-                           <li data-target="#banner1" data-slide-to="2"></li>
                         </ol>
                         <div class="carousel-inner">
                            <!-- first slide -->
@@ -112,48 +101,7 @@
                               </div>
                            </div>
                            <!-- second slide -->
-                           <div class="carousel-item">
-                              <div class="carousel-caption relative">
-                                 <div class="row">
-                                    <div class="col-md-6">
-                                       <div class="dream">
-                                          <h1>
-                                             Bem Vindo ao <br>CODER TECH <br>HOSTING<br>website
-                                          </h1>
-                                          <a class="read_more" href="Javascript:void(0)">Get Stared</a>    
-                                          <a class="read_more" href="Javascript:void(0)">Contact Us</a>
-                                       </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                       <div class="dream_img">
-                                          <figure><img src="images/dream_img.png" alt="#"/></figure>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
                            <!-- third slide-->
-                           <div class="carousel-item">
-                              <div class="carousel-caption relative">
-                                 <div class="row">
-                                    <div class="col-md-6">
-                                       <div class="dream">
-                                          <h1>
-                                             PowerFul <br>HOSTING <br>Your dream <br>website
-                                          </h1>
-                                          <a class="read_more" href="Javascript:void(0)">Get Stared</a>    
-                                          <a class="read_more" href="Javascript:void(0)">Contact Us</a>
-                                       </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                       <div class="dream_img">
-                                          <figure><img src="images/dream_img.png" alt="#"/></figure>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
                         <!-- controls -->
                         <a class="carousel-control-prev" href="#banner1" role="button" data-slide="prev">
                         <i class="fa fa-arrow-left" aria-hidden="true"></i>
@@ -215,7 +163,7 @@
                   <div id="ho_co" class="order-box_main">
                      <div class="order-box text_align_center">
                         <h3>HOST SAMP BASIC</h3>
-                        <p>Apartir<span>R$:15</span> POR MÊS</p>
+                        <p>Apartir<span>R$:5,00</span> POR MÊS</p>
                         <a href="Javascript:void(0)">Uso para servidor</a>
                         <ul class="supp">
                            <li><i class="fa-solid fa-server"></i> 50 SLOT</li>
@@ -224,41 +172,39 @@
                            <li><i class="fa-brands fa-cpanel"></i> Painel TcAdmin</li>
                         </ul>
                      </div>
-                     <a class="read_more" href="Javascript:void(0)">Compre Agora</a>
+                     <a class="read_more" href="https://api.whatsapp.com/send?phone=5527997730704&text=Ol%C3%A1%20vum%20saber%20mais%20sobre%20%C3%A1%20Host">Compre Agora</a>
                   </div>
                </div>
                <div class="col-md-4">
                   <div id="ho_co" class="order-box_main">
                      <div class="order-box text_align_center">
-                        <h3>Reseller Hosting</h3>
-                        <p>STARTING  <span>$9</span> PER MONTH</p>
-                        <a href="Javascript:void(0)">Personal use</a>
+                        <h3>HOST SAMP </h3>
+                        <p>Apartir de <span>R$:10</span> Por Mês</p>
+                        <a href="Javascript:void(0)">Uso servidor</a>
                         <ul class="supp">
-                           <li>Unlimited projects</li>
-                           <li>24/7 support</li>
-                           <li>Personal use</li>
-                           <li>Unlimited projects</li>
-                           <li>24/7 support</li>
+                           <li><i class="fa-solid fa-server"></i> 100 SLOT</li>
+                           <li><i class="fa-solid fa-shield-halved"></i> Proteção ataque DDOS</li>
+                           <li><i class="fa-solid fa-headset"></i> Suporte 12/7</li>
+                           <li><i class="fa-brands fa-cpanel"></i> Painel TcAdmin</li>
                         </ul>
                      </div>
-                     <a class="read_more" href="Javascript:void(0)">Buy Now</a>
+                     <a class="read_more" href="https://api.whatsapp.com/send?phone=5527997730704&text=Ol%C3%A1%20vum%20saber%20mais%20sobre%20%C3%A1%20Host">Comprar agora</a>
                   </div>
                </div>
                <div class="col-md-4">
                   <div id="ho_co" class="order-box_main">
                      <div class="order-box text_align_center">
-                        <h3>Dedicated Servers</h3>
-                        <p>STARTING  <span>$9</span> PER MONTH</p>
-                        <a href="Javascript:void(0)">Personal use</a>
+                        <h3>HOST SAMP </h3>
+                        <p>Apartir de <span>R$:17</span> Por Mês</p>
+                        <a href="Javascript:void(0)">Uso servidor</a>
                         <ul class="supp">
-                           <li>Unlimited projects</li>
-                           <li>24/7 support</li>
-                           <li>Personal use</li>
-                           <li>Unlimited projects</li>
-                           <li>24/7 support</li>
+                           <li><i class="fa-solid fa-server"></i> 200 SLOT</li>
+                           <li><i class="fa-solid fa-shield-halved"></i> Proteção ataque DDOS</li>
+                           <li><i class="fa-solid fa-headset"></i> Suporte 12/7</li>
+                           <li><i class="fa-brands fa-cpanel"></i> Painel TcAdmin</li>
                         </ul>
                      </div>
-                     <a class="read_more" href="Javascript:void(0)">Buy Now</a>
+                     <a class="read_more" href="https://api.whatsapp.com/send?phone=5527997730704&text=Ol%C3%A1%20vum%20saber%20mais%20sobre%20%C3%A1%20Host">Comprar agora</a>
                   </div>
                </div>
             </div>
