--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                                           <h1>
                                              Bem Vindo ao <br>CODER TECH <br>HOSTING<br>website
                                           </h1>
-                                          <a class="read_more" href="Javascript:void(0)">Começar</a>    
-                                          <a class="read_more" href="Javascript:void(0)">Contato</a>
+                                          <a class="read_more" href="https://api.whatsapp.com/send?phone=5527997730704&text=Ol%C3%A1%20vim%20saber%20sobre%20%C3%A1%20host">Começar</a>    
+                                          <a class="read_more" href="https://api.whatsapp.com/send?phone=5527997730704&text=Ol%C3%A1%20vim%20saber%20sobre%20%C3%A1%20host">Contato</a>
                                        </div>
                                     </div>
                                     <div class="col-md-6">
@@ -172,7 +172,7 @@
                            <li><i class="fa-brands fa-cpanel"></i> Painel TcAdmin</li>
                         </ul>
                      </div>
-                     <a class="read_more" href="https://api.whatsapp.com/send?phone=5527997730704&text=Ol%C3%A1%20vum%20saber%20mais%20sobre%20%C3%A1%20Host">Compre Agora</a>
+                     <a class="read_more" href="https://api.whatsapp.com/send?phone=5527997730704&text=Ol%C3%A1%20vim%20saber%20sobre%20%C3%A1%20host">Compre Agora</a>
                   </div>
                </div>
                <div class="col-md-4">
@@ -188,7 +188,7 @@
                            <li><i class="fa-brands fa-cpanel"></i> Painel TcAdmin</li>
                         </ul>
                      </div>
-                     <a class="read_more" href="https://api.whatsapp.com/send?phone=5527997730704&text=Ol%C3%A1%20vum%20saber%20mais%20sobre%20%C3%A1%20Host">Comprar agora</a>
+                     <a class="read_more" href="https://api.whatsapp.com/send?phone=5527997730704&text=Ol%C3%A1%20vim%20saber%20sobre%20%C3%A1%20host">Comprar agora</a>
                   </div>
                </div>
                <div class="col-md-4">
@@ -204,7 +204,7 @@
                            <li><i class="fa-brands fa-cpanel"></i> Painel TcAdmin</li>
                         </ul>
                      </div>
-                     <a class="read_more" href="https://api.whatsapp.com/send?phone=5527997730704&text=Ol%C3%A1%20vum%20saber%20mais%20sobre%20%C3%A1%20Host">Comprar agora</a>
+                     <a class="read_more" href="https://api.whatsapp.com/send?phone=5527997730704&text=Ol%C3%A1%20vim%20saber%20sobre%20%C3%A1%20host">Comprar agora</a>
                   </div>
                </div>
             </div>
